--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -66,7 +66,7 @@ p
 
 @media (min-width: 1280px)
   p
-    // font-size: 17px
+    font-size: 18px
     // line-height: 160%
 
 @media (min-width: 1440px)
@@ -114,7 +114,7 @@ h2
 
 @media (min-width: 1024px)
   h2
-    font-size: 28px
+    // font-size: 28px
 
 @media (min-width: 1490px)
   h2
