--- a/styles/parts/NextSection.module.sass
+++ b/styles/parts/NextSection.module.sass
@@ -27,7 +27,7 @@
   .next
     padding: 0 4.5vw
     margin-top: 140px
-    margin-bottom: 20px
+    // margin-bottom: 20px
     max-width: 680px
     p
     h1
