--- a/styles/parts/WorksGrid.module.sass
+++ b/styles/parts/WorksGrid.module.sass
@@ -102,7 +102,7 @@
     // padding: 0 5.4vw
     // padding: 0 5vw
     padding: 0 4.5vw
-    margin-bottom: 140px
+    margin-bottom: 126px
     h1
       max-width: 704px
     .worksGrid
